<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="submitController"
            type="com.ismail.gads.GADsProject" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SubmitFormFragment"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="Project Submission"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableBottomCompat="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/form_input"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/lastName"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/first_name"
        app:source="@{submitController.firstName}"
        />


    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/form_input"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/last_name"
        app:source="@{submitController.lastName}"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/firstName"
        android:layout_marginTop="32dp"
        android:background="@drawable/form_input"
        android:padding="8dp"
        android:hint="@string/email_address"
        app:source="@{submitController.email}"
        />

    <EditText
        android:id="@+id/githubLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_marginTop="32dp"
        android:background="@drawable/form_input"
        android:padding="8dp"
        android:hint="@string/project_on_github_link"
        app:source="@{submitController.link}"
        />


    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/submit_btn"
        android:minHeight="0dp"
        android:paddingHorizontal="32dp"
        android:paddingVertical="4dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/githubLink"
        android:layout_marginTop="32dp"/>
        <!--android:onClick="@{()->submitController.submit(firstName.getText().toString(),lastName.getText().toString(),email.getText().toString(),githubLink.getText().toString())}"-->
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>